--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 	<title>Winner</title>
-	<link rel="stylesheet" type="text/css" href="style2.css">
+	<link rel="stylesheet" type="text/css" href="./css/style2.css">
+	<link rel="stylesheet" type="text/css" href="./css/jquery.lightbox-0.5.css">
+
 
 
 	<script type="text/javascript" src="js/jquery.js"></script>
@@ -54,7 +56,7 @@
 				<li class="white borderRadiusLeft"><a href="index2.html">Home</a></li>
 				<li><a href="#">Blogs</a></li>
 				<li><a href="#">News</a></li>
-				<li><a href="gallery.html">Gallery</a></li>
+				<li><a href="include/gallery.html">Gallery</a></li>
 				<li class="borderRadiusRight"><a href="#">Contact Us</a></li>
 			</ul>
 
